--- a/mystyle-future.css
+++ b/mystyle-future.css
@@ -22,10 +22,16 @@ nav {
 }
 
 nav a {
+    display: inline-block;
     margin: 0 50px;
     text-decoration: none;
     color: #333;
-    font-size: 18px;
+    font-size: 20px;
+    transition: color 0.3s ease;
+}
+
+nav a:hover {
+    color: #ef6648;
 }
 
 section {
