--- a/mystyles.css
+++ b/mystyles.css
@@ -9,17 +9,17 @@
   position: fixed;
   width: 100%;
   height: 100vh;
-  background: #e0e0f2;
+  background: #e2e2e696;
 }
 /* brackground end */
 
 /* navbar start */
 .logo {
   position: absolute;
-  top: 30px;
-  left: 120px;
+  top: 20px;
+  left: 200px;
   margin: 0;
-  box-shadow:  7px 7px grey;
+  box-shadow: 7px 7px grey;
 }
 
 nav {
@@ -31,9 +31,9 @@ nav {
   top: 0;
   left: 0;
   width: 100%;
-  height: 120px;
-  padding: 25px 10%;
-  background: #FF9900;
+  height: 115px;
+  padding: 18px 10%;
+  background: #eb8c55;
 }
 
 
@@ -47,8 +47,8 @@ nav {
 }
 
 .navbar a {
-  float: right;
-  font-size: 18px;
+  float: left;
+  font-size: 20px;
   color: #212121;
   text-align: center;
   padding: 30px 50px;
@@ -93,7 +93,7 @@ nav {
  
 /* Dropdown Button start */
 .dropbtn{
-  background-color: #FF9900;
+  background-color: #eb8c55;
   color: #fff;
   box-shadow:7px 7px #555;
   padding: 16px;
