--- a/mystyle-journey.css
+++ b/mystyle-journey.css
@@ -12,30 +12,32 @@ body {
 
 header {
     background-color: #ea9463;
-    padding: 20px 0;
+    padding: 40px 10%;
     text-align: center;
-}
-
-nav {
-    text-align: center;
-    margin: 20px 0;
 }
 
 nav a {
-    display: inline-block;
-    margin: 0 50px;
     text-decoration: none;
-    color: #333;
+    font-family: Arial, sans-serif;
+    position: absolute;
+    top: 35px;
+    left: 120px;
+    margin: 0;
     font-size: 20px;
     transition: color 0.3s ease;
+    color: #333;
+    display: flex;
+    padding: 15px 3%;
+    
 }
 
-nav a:hover {
-    color: #ea9463;
+nav a:hover, .contact:hover .dropbtn {
+    background-color: #f1f1f1;
 }
 
 section {
-    margin: 20px auto;
+    margin: 65px auto;
+    text-indent: 120px;
     padding: 20px;
     background-color: azure;
     border-radius: 8px;
